--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Tue Oct 11 10:24:38 IRST 2022
-sdk.dir=/Users/ehsanghorbannezhad/Library/Android/sdk
+#Sun Jul 30 15:09:42 IRST 2023
+sdk.dir=C\:\\Users\\abrnoc\\AppData\\Local\\Android\\Sdk
